--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,17 @@ header {
     border-radius: 50%;
     margin: 20px;
 }
+.profile-pic, .location-pic {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.profile-pic.visible, .location-pic.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 .hamburger-button {
     background: none;
     border: none;
@@ -156,10 +167,17 @@ main {
     width: 120px; /* Ajusta el ancho de los botones a un valor fijo para que todos sean iguales */
     height: 40px; /* Ajusta la altura para que todos los botones tengan el mismo tamaño */
     border-radius: 5px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    font-size: 16px;
+    
 }
 
 .buttons button:hover {
     background: #224466;
+    background-color: #007BFF; /* Cambia el color al hacer hover */
+    color: #fff;
+    transform: scale(1.1); /* Aumenta ligeramente el tamaño */
+
 }
 /* Estilos para el modal */
 /* .modal {
